# Rag_Atrchitecture

./: PLAN.md  PREREQUISITES.md  requirements.txt
bank-reconciliation-agent/: .env.example  .gitignore  ARCHITECTURE.md  README.md  TESTING_REPORT.md  instructions.md  pyproject.toml  requirements.txt
bank-reconciliation-agent/config/: bank_rules.yaml  thresholds.yaml
bank-reconciliation-agent/data/reference/: exception_catalog.json  historical_cases.json  sop_001_daily_reconciliation.md  sop_002_timing_differences.md  sop_003_duplicate_handling.md
bank-reconciliation-agent/data/test_samples/: bank_statement.csv  ledger.csv
bank-reconciliation-agent/frontend/: app.py
bank-reconciliation-agent/src/graph/: graph_builder.py  routes.py  state.py
bank-reconciliation-agent/src/ingestion/: enricher.py  schema.py
bank-reconciliation-agent/src/llm/: client.py  embeddings.py
bank-reconciliation-agent/src/matching_engine/: ledger_bank_aligner.py  models.py
bank-reconciliation-agent/src/output/: report_generator.py
bank-reconciliation-agent/src/rag/: cache.py  collection_manager.py  document_loader.py  ingest.py  knowledge_base.py  reranker.py  retriever.py
bank-reconciliation-agent/src/utils/: config.py  logging.py  metrics.py  metrics_runner.py
bank-reconciliation-agent/src/validation/: audit_trail.py  confidence_scorer.py  hallucination_guard.py
bank-reconciliation-agent/src/workflow/: api.py
bank-reconciliation-agent/tests/: test_api_manual.py
bank-reconciliation-agent/tests/e2e/: test_live_openai.py
data/chroma_db/: chroma.sqlite3
(+32 files in other folders)
